// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Media basic 1`] = `
<div>
  <div
    class="css-1yp4ln"
  />
</div>
`;

exports[`Media body 1`] = `
<div>
  <div
    class="css-1yp4ln"
  >
    image
    <div
      class="css-fwkgyb"
    >
      body
    </div>
  </div>
</div>
`;
